Fix link spacing

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ a {
   font-weight: 500;
   font-size: 0.95rem;
   padding-top: 0.7rem;
+  line-height: 1.7;
 }
 
 .article-links li {
